# pgc

./: .editorconfig  README.md  bibliografia.bib  dissertacao.tex
.overleaf/: settings.json
capitulos/: conclusao.tex  ferramentas.tex  fundamentacao-teorica.tex  introducao.tex  resultados.tex
experimentos/: Makefile  README.md  pyproject.toml
experimentos/docs/: mkdocs.yml
experimentos/docs/docs/: index.md
experimentos/experimentos/: __init__.py  dataset.py  features.py  plots.py
experimentos/experimentos/modeling/: predict.py  train.py
experimentos/notebooks/: corporate-credit-rating-analysis.ipynb  lending-club-analysis.ipynb  taiwan-credit-analysis.ipynb
extras/: conf_citacoes.tex  conf_pdf.tex  dados.tex
postextual/: anexos.tex  apendices.tex
pretextual/: agradecimentos.tex  assinaturas.tex  capa.tex  catalografica.tex  dedicatoria.tex  epigrafe.tex  resumos.tex
