[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "experimentos"
version = "0.0.1"
description = "Experimentos do projeto."
authors = [
  { name = "William Fernandes Dias" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipykernel>=6.30.1",
    "loguru",
    "mkdocs",
    "pandas>=2.3.2",
    "pip",
    "polars>=1.32.3",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["experimentos"]
include = ["pyproject.toml", "experimentos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["experimentos"]
force-sort-within-sections = true

